--- a/config/sync/core.entity_form_display.node.notice.default.yml
+++ b/config/sync/core.entity_form_display.node.notice.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.notice.body
+    - field.field.node.notice.field_notice_body
     - node.type.notice
   module:
     - path
@@ -13,21 +13,21 @@ targetEntityType: node
 bundle: notice
 mode: default
 content:
-  body:
+  created:
+    type: datetime_timestamp
+    weight: 10
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_notice_body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 122
     region: content
     settings:
       rows: 9
       summary_rows: 3
       placeholder: ''
       show_summary: false
-    third_party_settings: {  }
-  created:
-    type: datetime_timestamp
-    weight: 10
-    region: content
-    settings: {  }
     third_party_settings: {  }
   path:
     type: path
