--- a/config/sync/core.entity_form_display.node.study_material.default.yml
+++ b/config/sync/core.entity_form_display.node.study_material.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.study_material.body
     - field.field.node.study_material.field_stream_name_1
+    - field.field.node.study_material.field_subject
     - node.type.study_material
   module:
     - path
@@ -33,6 +34,16 @@ content:
   field_stream_name_1:
     type: entity_reference_autocomplete
     weight: 122
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_subject:
+    type: entity_reference_autocomplete
+    weight: 123
     region: content
     settings:
       match_operator: CONTAINS
