--- a/config/sync/core.entity_view_display.node.study_material.default.yml
+++ b/config/sync/core.entity_view_display.node.study_material.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.study_material.body
     - field.field.node.study_material.field_stream_name_1
+    - field.field.node.study_material.field_subject
     - node.type.study_material
   module:
     - text
@@ -28,6 +29,14 @@ content:
       link: true
     third_party_settings: {  }
     weight: 102
+    region: content
+  field_subject:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 103
     region: content
   links:
     settings: {  }
