--- a/config/sync/core.entity_view_display.node.notice.teaser.yml
+++ b/config/sync/core.entity_view_display.node.notice.teaser.yml
@@ -4,27 +4,19 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.notice.body
+    - field.field.node.notice.field_notice_body
     - node.type.notice
   module:
-    - text
     - user
 id: node.notice.teaser
 targetEntityType: node
 bundle: notice
 mode: teaser
 content:
-  body:
-    type: text_summary_or_trimmed
-    label: hidden
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
-    weight: 101
-    region: content
   links:
     settings: {  }
     third_party_settings: {  }
     weight: 100
     region: content
-hidden: {  }
+hidden:
+  field_notice_body: true
