--- a/config/sync/core.entity_view_display.node.video.teaser.yml
+++ b/config/sync/core.entity_view_display.node.video.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.video.body
     - field.field.node.video.field_stream_name
+    - field.field.node.video.field_subject_video
     - field.field.node.video.field_video_file
     - node.type.video
   module:
@@ -31,4 +32,5 @@ content:
     region: content
 hidden:
   field_stream_name: true
+  field_subject_video: true
   field_video_file: true
