--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -13,6 +13,8 @@ module:
   contact: 0
   content_access: 0
   contextual: 0
+  custom_data_cleanup: 0
+  custom_fetch_data: 0
   custom_signupform: 0
   datetime: 0
   dblog: 0
@@ -34,6 +36,7 @@ module:
   mysql: 0
   node: 0
   options: 0
+  otp: 0
   page_cache: 0
   path: 0
   path_alias: 0
