--- a/config/sync/field.field.node.notice.field_notice_body.yml
+++ b/config/sync/field.field.node.notice.field_notice_body.yml
@@ -1,23 +1,23 @@
-uuid: 87acb4ba-3c9b-4531-87a8-5abc53b7dfb4
+uuid: 0145e9da-f975-400b-88b8-c6269ead6e78
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.body
+    - field.storage.node.field_notice_body
     - node.type.notice
   module:
     - text
-id: node.notice.body
-field_name: body
+id: node.notice.field_notice_body
+field_name: field_notice_body
 entity_type: node
 bundle: notice
-label: Body
+label: 'Notice Body'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  display_summary: true
+  display_summary: false
   required_summary: false
 field_type: text_with_summary
