--- a/config/sync/views.view.stream.yml
+++ b/config/sync/views.view.stream.yml
@@ -131,6 +131,45 @@ display:
           plugin_id: bundle
           value:
             stream: stream
+        uid_current:
+          id: uid_current
+          table: users
+          field: uid_current
+          relationship: reverse__user__field_stream
+          group_type: group
+          admin_label: ''
+          entity_type: user
+          plugin_id: user_current
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
       style:
         type: default
       row:
@@ -143,7 +182,17 @@ display:
           distinct: false
           replica: false
           query_tags: {  }
-      relationships: {  }
+      relationships:
+        reverse__user__field_stream:
+          id: reverse__user__field_stream
+          table: taxonomy_term_field_data
+          field: reverse__user__field_stream
+          relationship: none
+          group_type: group
+          admin_label: field_stream
+          entity_type: taxonomy_term
+          plugin_id: entity_reverse
+          required: false
       header: {  }
       footer: {  }
       display_extenders: {  }
@@ -153,6 +202,7 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url.query_args
+        - user
         - user.permissions
       tags: {  }
   page_1:
@@ -178,5 +228,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url.query_args
+        - user
         - user.permissions
       tags: {  }
